--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+   <head>
+     <title>HOLDA</title>
+     <link href="style.css" rel="stylesheet">
+  </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <div id="tekst1">
+    <h2>
+      start let's go
+    </h2>
+  </div>
+  <ul id="menu">
+     <li><a href="omnie.html">O mnie</a></li>
+    <li><a href="kanal.html">Kanał</a></li>
+  </ul>
+  </body>
 </html>
