--- a/omnie.html
+++ b/omnie.html
@@ -10,7 +10,7 @@
       <ol>
         <li>Jestem Filip</li>
         <li>Mam 15 lat</li>
-        <li>Lista jest fajna</li>
+        <li>Chodzę do technikum informatycznego</li>
       </ol>
     </div>
     <div id="kiedy">
@@ -46,16 +46,6 @@
     <h2>
       Nazwy kanału
     </h2>
-    <ol>
-      <li>zajdż gaming</li>
-      <li>zajdż</li>
-      <li>zajdz live</li>
-      <li>princer</li>
-      <li>zajdz</li>
-      <li>zlpl f fortnite</li>
-      <li>zlpl</li>
-      <li>KGM HOŁDA</li>
-      <li>FKK HOŁDA</li>
-    </ol>
+  
   </body>
 </html>
