--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
    <head>
-     <title>HOLDA</title>
+     <title>W.I.P</title>
      <link href="style.css" rel="stylesheet">
   </head>
 <body>
