--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
    <head>
-     <title>W.I.P</title>
+     <title>p.w.t</title>
      <link href="style.css" rel="stylesheet">
   </head>
 <body>
   <div id="tekst1">
     <h2>
-      WORK IN PROGRES
+      PRACE W TOKU
     </h2>
   </div>
   
