--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
    <head>
      <title>p.w.t</title>
      <link href="style.css" rel="stylesheet">
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Comic+Sans+MS">
+
   </head>
 <body>
   <div id="tekst1">
     <h2>
-      PRACE W TOKU
+      LINKI DO PODSTRON <img src="fotki/vixa.gif" width="40"/>
     </h2>
   </div>
+
+
+  <div id="linki">
+    <a href="dwastart.html">Drugi index</a> <br />
+    <a href="psi/tabela/tabelek.html">TABELA NA PSI</a> <br />
+    <a href="smb/main.html">SMB</a><br />
+    <a href="psi/">PSI</a>
+  </div>
+
   
   </body>
 </html>
