--- a/psi/tabela/tabelek.html
+++ b/psi/tabela/tabelek.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="pl-Pl">
-<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-2"/>
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 <head>
-<title>
-TABELA
-</title>
+  <title>
+  TABELA
+  </title>
+  <link href="tabela.css" rel="stylesheet">
 </head>
 <body>
 <table border="1">
 
-<tr>
+<div id="lnk">
+  <a href="../../dwastart.html">Boczne ale głowne xD</a><br />
+  <a href="../../index.html">Głowne</a>
+</div>
 
+
+<br />
+<br />
+<br />
+
+
+<tr>
 <th>1</th>
 <th>2</th>
 </tr>
@@ -196,29 +207,23 @@ TABELA
 <tr>
 <td bgcolor="grey">
 <marquee behavior="scroll" direction="up">
-<img src="foty/kot.jpg" width="200px" />
+<img src="kot.jpg" width="200"/>
 </marquee>
 </td>
 <td bgcolor="orange">
 <marquee behavior="scroll" direction="down">
-<img src="foty/luna.jpg" width="200px" />
-</marquee>
+<img src="luna.jpg" width="300" />
+</marquee> 
 </td>
 </tr>
 <tr>
 <td colspan="2" bgcolor="pink">
 <marquee behavior="scroll" direction="right">
-<img src="foty/gekob.jfif" width="200px" />
+<img src="gekon.jpg" width="200" />
 </marquee>
 </td>
 </tr>
 </table> <br />
-
-
-
-
-
-
 
 
 
