--- a/smb/main.html
+++ b/smb/main.html
@@ -15,6 +15,7 @@ oranges.net
 <a href="link">Upload</a>
 <a href="link">Tags</a>
 <a href="link">About us</a>
+<a href="../index.html">Początek</a>
 </div class="menu">
 <br> 
 <div class="container">
