--- a/dwastart.html
+++ b/dwastart.html
@@ -2,17 +2,20 @@
 <html>
    <head>
      <title>HOLDA</title>
-     <link href="style.css" rel="stylesheet">
+     <link href="dwa.css" rel="stylesheet">
   </head>
-<body>
+<body bgcolor="#1bf58f">
   <div id="tekst1">
     <h2>
       start let's go
     </h2>
   </div>
+  <div id="tekst2">
   <ul id="menu">
      <li><a href="omnie.html">O mnie</a></li>
     <li><a href="kanal.html">Kanał</a></li>
+    <li><a href="index.html">Początek Początków</a></li>
   </ul>
+  </div>
   </body>
 </html>
