--- a/kanal.html
+++ b/kanal.html
@@ -8,7 +8,7 @@
   <h3>
   <ul id="menu2">
      <li><a href="omnie.html">O mnie</a></li>
-    <li><a href="index.html">Start</a></li>
+    <li><a href="dwastart.html">Start</a></li>
     </ul>
       <li><a href="https://www.youtube.com/channel/UC1yLseKryN2exiS8_0CyUgg">FKK HOŁDA</a></li>
        
