--- a/omnie.html
+++ b/omnie.html
@@ -5,7 +5,7 @@
     <link href="omnie.css" rel="stylesheet" />
   </head>
   <body>
-    <a href="index.html">START</a>
+    <a href="dwastart.html">START</a>
     <div id="omnie">
       <ol>
         <li>Jestem Filip</li>
