--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
    <head>
-     <title>p.w.t</title>
+     <title>MAIN</title>
      <link href="style.css" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Comic+Sans+MS">
 
