--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="dwastart.html">Drugi index</a> <br />
     <a href="psi/tabela/tabelek.html">TABELA NA PSI</a> <br />
     <a href="smb/main.html">SMB</a><br />
+    <a href="https://aquaer97.github.io">aquaer97</a>
   </div>
 
   
