--- a/psi/tabela/tabelek.html
+++ b/psi/tabela/tabelek.html
@@ -16,7 +16,7 @@
 <br />
 <br />
 
-
+<!-- komentarz -->
 
 
 <table border="1">
@@ -223,6 +223,35 @@
 </td>
 </tr>
 </table> <br />
+
+<!-- tabela dla złomka -->
+
+
+<table border="1">
+  <tr>
+    <td>Maupa</td>
+    <td>maupa 1</td>
+  </tr>
+  <tr>
+    <td colspan="2">Maupa</td>
+  </tr>
+  <tr>
+    <td rowspan="2">wyzimek</td>
+    <td>123</td>
+  </tr>
+  <tr>
+    <td>polska</td>
+  </tr>
+</table>
+
+
+
+
+
+
+
+
+
 
 
 
