--- a/psi/tabela/tabelek.html
+++ b/psi/tabela/tabelek.html
@@ -243,13 +243,80 @@
     <td>polska</td>
   </tr>
 </table>
+<br />
+<br />
+<br />
 
 
+<table border="1">
+  <tr bgcolor="yellow">
+    <td>1</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <th colspan="2">Wyzimek</th>
+  </tr>
+  <tr>
+    <td rowspan="2" bgcolor="blue">Maupa</td>
+    <td>Rudy</td>
+  </tr>
+  <tr>
+    <td>Siedem</td>
+  </tr>
+  
+</table> <br />
 
 
+<table border="2" bordercolor="yellow" width="40%">
+  <tr>
+    <td><img src="kot.jpg""></td>
+    <th align="right" bgcolor="navy">Wyzimko potas XD</th>
+  </tr>
+<tr>
+<th rowspan="3">Abdullah xD</th>
+<th>BaNa2</th>
+</tr>
+<tr bgcolor="orange">
+  <td align="center">Arnoldzisko</td>
+</tr>
+<tr>
+  <td>Maupka z zoo</td>
+</tr>
+<tr bgcolor="lime">
+  <td>Potasek xD 2137</td>
+  <td>&nbsp;</td>
+</tr>
+<tr>
+  <th align="left">Koniec 🥚</th>
+  <td><img src="../../fotki/vixa.gif" /></td>
 
+</tr>
+</table> <br />
 
-
+<table border="1" width="40%">
+  <tr>
+    <td bgcolor="lime" colspan="2">
+      <marquee behavior="alternate" direction="left" scrollamount="15" >
+        Wyzimek xD
+      </marquee>
+    </td>
+  </tr>
+  <tr>
+    <th align="right">Nie ruszam się.</th>
+    <td align="right">Ja też nie 😱</td>
+  </tr>
+  <tr bgcolor="pink" align="left">
+      <td>Siemanko Witaj Na Bagnach</td>
+      <th>Znaczy na kotsuchnie xD</th>
+  </tr>
+  <tr>
+    <td colspan="2">
+    <marquee behavior="alternate" direction="right" scrollamount="15" >
+       xD 
+  </marquee>
+    </td>
+  </tr>
+</table> <br />
 
 
 
