--- a/omnie.html
+++ b/omnie.html
@@ -36,11 +36,11 @@
       <li>Procesor: Intel Core i9 13900KF</li>
       <li>Płyta Główna: Gigabyte UD AX Z790</li>
       <li>Dysk SSD M.2: Kingston skc3000d2048g</li>
-      <li>Dysk HDD: BARRACUDA st2000lm015-2e8174</li>
+      <li>Dysk HDD: Seagate BARRACUDA st2000lm015-2e8174</li>
       <li>Zasilacz: CoolerMaster: 1050W</li>
-      <li>myszka roccat tyon</li>
-      <li>mikrofon: SPC Gear SM950</li>
-      <li>słuchawki: Logitech G534</li>
+      <li>Myszka: Roccat Tyon</li>
+      <li>Mikrofon: SPC Gear SM950</li>
+      <li>Słuchawki: Logitech G345</li>
       <li>-----------</li>
     </ul>
     <h2>
