--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <a href="dwastart.html">Drugi index</a> <br />
     <a href="psi/tabela/tabelek.html">TABELA NA PSI</a> <br />
     <a href="smb/main.html">SMB</a><br />
-    <a href="https://aquaer97.github.io">aquaer97</a>
+    <a href="https://aquaer97.github.io">aquaer97</a> <br />
+    <p><a href="http://h0ld4.pl">MOJA STRONA POD MOIM ADRESEM BRO</a></p>
   </div>
 
   
