--- a/smb/main.html
+++ b/smb/main.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
 <title>OrangeS.net</title>
-<link rel="stylesheet" type="text/css" href="stylekol.css"
+<link rel="stylesheet" type="text/css" href="stylekol.css">
 </head>
 <body>
 <div id="site">
