--- a/gry/gry.html
+++ b/gry/gry.html
@@ -3,7 +3,80 @@
 <meta />
 <head>
 <title>Gry</title>
-<link href="GRY.css" rel="stylesheet">
+<link href="gry.css" rel="stylesheet">
 </head>
+<body>
 
+    <div id="frt">
+        <a href="../dwastart.html">Boczne ale głowne xD</a><br />
+        <a href="../index.html">Głowne</a>
+    </div>
+<br />
+<br />
+<br />
+<br />
+    <div id="tabela2023">
+      <table border="2">
+        <tr bgcolor="#FFFFFF">
+            <th colspan="6">Ukończone gry rok: 2023</th>
+        </tr>
+        <tr>
+            <td>Styczeń</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Luty</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Marzec</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Kwiecień</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Maj</td>
+            <td colspan="5">God Of War (2019) PC</td>
+        </tr>
+        <tr>
+            <td>Czerwiec</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Lipic</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Sierpień</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Wrzesień</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr>
+            <td>Październik</td>
+            <td colspan="5">NIC XD</td>
+        </tr>
+        <tr bgcolor="white">
+            <td>Listopad</td>
+            <td colspan="5">Nie było jeszcze xD</td>
+        </tr>
+        <tr bgcolor="white">
+            <td>Grudzień</td>
+            <td colspan="5">Nie było jeszcze xD</td>
+        </tr>
+      </table>
+    </div>
+    <br />
+    <br />
+    <marquee behavior="alternate" direction="right" scrollamount="100">
+        <img src="fotoradar/gow.jpeg" />
+    </marquee>
+
+
+
+</body>
 </html>
