--- a/psi/tabela/tabelek.html
+++ b/psi/tabela/tabelek.html
@@ -304,7 +304,7 @@
   </tr>
   <tr bgcolor="pink" align="left">
       <td>Siemanko Witaj Na Bagnach</td>
-      <th>Znaczy na kotsuchnie xD</th>
+      <th>Znaczy na kostuchnie xD</th>
   </tr>
   <tr>
     <td colspan="2">
