--- a/omnie.html
+++ b/omnie.html
@@ -9,7 +9,7 @@
     <div id="omnie">
       <ol>
         <li>Jestem Filip</li>
-        <li>Mam 15 lat</li>
+        <li>Mam 16 lat</li>
         <li>Chodzę do technikum informatycznego</li>
       </ol>
     </div>
@@ -32,7 +32,7 @@
       <li>-----------</li>
       <li>KOMPUTER</li>
       <li>Obudowa: Nwm z xkom</li>
-      <LI>GPU: Gigabyte NVIDIA 4080</LI>
+      <li>GPU: Gigabyte NVIDIA 4080</li>
       <li>Procesor: Intel Core i9 13900KF</li>
       <li>Płyta Główna: Gigabyte UD AX Z790</li>
       <li>Dysk SSD M.2: Kingston skc3000d2048g</li>
