--- a/gry/gry.html
+++ b/gry/gry.html
@@ -36,7 +36,7 @@
             <td>Kwiecień</td>
             <td colspan="5">NIC XD</td>
         </tr>
-        <tr>
+        <tr bgcolor="white">
             <td>Maj</td>
             <td colspan="5">God Of War (2019) PC</td>
         </tr>
@@ -60,16 +60,76 @@
             <td>Październik</td>
             <td colspan="5">NIC XD</td>
         </tr>
-        <tr bgcolor="white">
+        <tr>
             <td>Listopad</td>
-            <td colspan="5">Nie było jeszcze xD</td>
+            <td colspan="5">NIC XD</td>
         </tr>
-        <tr bgcolor="white">
+        <tr>
             <td>Grudzień</td>
-            <td colspan="5">Nie było jeszcze xD</td>
+            <td colspan="5">NIC XD</td>
         </tr>
       </table>
     </div>
+    <br />
+    
+    
+    <div id="tabela2024">
+        <table border="2">
+            <tr bgcolor="#FFFFFF">
+                <th colspan="6">Ukończone gry rok: 2024</th>
+            </tr>
+            <tr>
+                <td>Styczeń</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Luty</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Marzec</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Kwiecień</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Maj</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Czerwiec</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Lipic</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Sierpień</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Wrzesień</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Październik</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Listopad</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+            <tr>
+                <td>Grudzień</td>
+                <td colspan="5">Nie było jeszcze xD</td>
+            </tr>
+          </table>
+    </div>
+
+
     <br />
     <br />
     <marquee behavior="alternate" direction="right" scrollamount="100">
