--- a/gry/gry.html
+++ b/gry/gry.html
@@ -80,7 +80,7 @@
             </tr>
             <tr>
                 <td>Styczeń</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">W trakcie XD</td>
             </tr>
             <tr>
                 <td>Luty</td>
