--- a/gry/gry.html
+++ b/gry/gry.html
@@ -80,11 +80,11 @@
             </tr>
             <tr>
                 <td>Styczeń</td>
-                <td colspan="5">W trakcie XD</td>
+                <td colspan="5">NIC XD</td>
             </tr>
             <tr>
                 <td>Luty</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">W trakcie xD</td>
             </tr>
             <tr>
                 <td>Marzec</td>
