--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <a href="smb/main.html">SMB</a><br />
     <a href="https://aquaer97.github.io">aquaer97</a> <br />
     <a href="http://h0ld4.pl">MOJA STRONA POD MOIM ADRESEM BRO</a> <br />
-    <a href="gry/gry.html">Gierki ogólne xD</a>
+    <a href="gry/gry.html">Gierki ogólne xD</a> <br />
+    <a href="bajka_holdyk.html"> Bajka na PSI </a>
   </div>
 
   
