--- a/gry/gry.html
+++ b/gry/gry.html
@@ -84,15 +84,15 @@
             </tr>
             <tr>
                 <td>Luty</td>
-                <td colspan="5">W trakcie xD</td>
+                <td colspan="5">Nic XD</td>
             </tr>
             <tr>
                 <td>Marzec</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">Nic XD</td>
             </tr>
             <tr>
                 <td>Kwiecień</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">W trakcie xD</td>
             </tr>
             <tr>
                 <td>Maj</td>
