--- a/omnie.html
+++ b/omnie.html
@@ -39,6 +39,7 @@
       <li>Dysk HDD: Seagate BARRACUDA st2000lm015-2e8174</li>
       <li>Zasilacz: CoolerMaster: 1050W</li>
       <li>Myszka: Roccat Tyon</li>
+      <li>Klawiatura: Razer Huntsman Mini</li>
       <li>Mikrofon: SPC Gear SM950</li>
       <li>Słuchawki: Logitech G535</li>
       <li>-----------</li>
