--- a/gry/gry.html
+++ b/gry/gry.html
@@ -92,7 +92,7 @@
             </tr>
             <tr>
                 <td>Kwiecień</td>
-                <td colspan="5">W trakcie xD</td>
+                <td colspan="5">Nic XD</td>
             </tr>
             <tr>
                 <td>Maj</td>
