--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="https://aquaer97.github.io">aquaer97</a> <br />
     <a href="http://h0ld4.pl">MOJA STRONA POD MOIM ADRESEM BRO</a> <br />
     <a href="gry/gry.html">Gierki ogólne xD</a> <br />
-    <a href="bajka_holdyk.html"> Bajka na PSI </a>
+    <!-- <a href="bajka_holdyk.html"> Bajka na PSI </a> -->
   </div>
 
   
