--- a/gry/gry.html
+++ b/gry/gry.html
@@ -100,19 +100,19 @@
             </tr>
             <tr>
                 <td>Czerwiec</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">Nic xD</td>
             </tr>
             <tr>
                 <td>Lipic</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">Nic xD</td>
             </tr>
             <tr>
                 <td>Sierpień</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">Nic xD</td>
             </tr>
             <tr>
                 <td>Wrzesień</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">Nic xD</td>
             </tr>
             <tr>
                 <td>Październik</td>
