--- a/gry/gry.html
+++ b/gry/gry.html
@@ -96,7 +96,7 @@
             </tr>
             <tr>
                 <td>Maj</td>
-                <td colspan="5">Nie było jeszcze xD</td>
+                <td colspan="5">Nic xD</td>
             </tr>
             <tr>
                 <td>Czerwiec</td>
