--- a/old/omnie.html
+++ b/old/omnie.html
@@ -1,52 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>O mnie</title>
-    <link href="omnie.css" rel="stylesheet" />
-  </head>
-  <body>
-    <a href="dwastart.html">START</a>
-    <div id="omnie">
-      <ol>
-        <li>Jestem Filip</li>
-        <li>Mam 16 lat</li>
-        <li>Chodzę do technikum informatycznego</li>
-      </ol>
-    </div>
-    <div id="kiedy">
-      <h2>
-        Kiedy zacząłem nagrywać na YouTube?
-      </h2>
-    </div>
-    <div id="tekst1">
-    <p>
-      W 2017 roku.
-    </p>
-      </div>
-    <div id="sprzęt">
-      <h2>
-        Jaki mam sprzęt?
-      </h2>
-    </div>
-    <ul>
-      <li>-----------</li>
-      <li>KOMPUTER</li>
-      <li>Obudowa: Nwm z xkom</li>
-      <li>GPU: Gigabyte NVIDIA 4080</li>
-      <li>Procesor: Intel Core i9 13900KF</li>
-      <li>Płyta Główna: Gigabyte UD AX Z790</li>
-      <li>Dysk SSD M.2: Kingston skc3000d2048g</li>
-      <li>Dysk HDD: Seagate BARRACUDA st2000lm015-2e8174</li>
-      <li>Zasilacz: CoolerMaster: 1050W</li>
-      <li>Myszka: Roccat Tyon</li>
-      <li>Klawiatura: Razer Huntsman Mini</li>
-      <li>Mikrofon: SPC Gear SM950</li>
-      <li>Słuchawki: Logitech G535</li>
-      <li>-----------</li>
-    </ul>
+
+<head>
+  <title>O mnie</title>
+  <link href="omnie.css" rel="stylesheet" />
+</head>
+
+<body>
+  <a href="index.html">START</a>
+  <div id="omnie">
+    <ol>
+      <li>Jestem Filip</li>
+      <li>Mam 16 lat</li>
+      <li>Chodze do technikum informatycznego</li>
+    </ol>
+  </div>
+
+  <div id="sprzet">
     <h2>
-      Na razie koniec ;)
+      Jaki mam sprzet?
     </h2>
-  
-  </body>
+  </div>
+  <ul>
+    <li>-----------</li>
+    <li>KOMPUTER</li>
+    <li>Obudowa: Nwm z xkom</li>
+    <li>GPU: Gigabyte NVIDIA 4080</li>
+    <li>Procesor: Intel Core i9 13900KF</li>
+    <li>Plyta Glowna: Gigabyte UD AX Z790</li>
+    <li>Glowny Dysk SSD M.2: Samsung 990 PRO 4TB</li>
+    <li>Drugi Dysk SSD M.2: Kingston skc3000d2048g</li>
+    <li>Dysk HDD: Seagate BARRACUDA st2000lm015-2e8174</li>
+    <li>Zasilacz: CoolerMaster: 1050W</li>
+    <li>Myszka: Roccat Tyon</li>
+    <li>Klawiatura: Razer Huntsman Mini</li>
+    <li>Mikrofon: SPC Gear SM950</li>
+    <li>Sluchawki: Logitech G535</li>
+    <li>-----------</li>
+  </ul>
+  <h2>
+    Na razie konie :>
+  </h2>
+
+</body>
+
 </html>
