--- a/old/psi/tabela/tabelek.html
+++ b/old/psi/tabela/tabelek.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="lnk">
-    <a href="../../dwastart.html">Boczne ale głowne xD</a><br />
+    <!-- <a href="../../dwastart.html">Boczne ale głowne xD</a><br /> -->
     <a href="../../index.html">Głowne</a>
   </div>
 <br />
