--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Road44 Strona</title>
+    <link rel="stylesheet" href="jeden.css">
 </head>
 
 <body>
-    <p>Nic nie działa lol</p>
-    <a href="old/index.html">Stare LOL</a>
+
+    <a id="link" href="http://h0ld4.eu">
+        <h2 id="tekst">Nowa Strona</h2>
+    </a>
+
+    <p>PS. Kiedyś rozdziele te tabelki na poszczególne lata :)</p>
 </body>
 
 </html>
