--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Road44 Strona</title>
-    <link rel="stylesheet" href="jeden.css">
+    <link rel="stylesheet" href="css/style_main.css">
 </head>
 
 <body>
