dodanie szkolnego JS'a

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a id="link" href="http://h0ld4.eu">
         <h2 id="tekst">Nowa Strona</h2>
     </a>
+    <a href="szkolny-js/wstep.html">
+        <h2>Szkolny JS</h2>
+    </a>
 
     <p>PS. Kiedyś rozdziele te tabelki na poszczególne lata :)</p>
 </body>
