dodano powrót do pliku wstep.html w dwóch innych plikach

--- a/szkolny-js/instrukcjewarunkowe.html
+++ b/szkolny-js/instrukcjewarunkowe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instrukcje Warunkowe</title>
-    
+
     <link rel="stylesheet" href="grzyb.css">
 </head>
 
@@ -48,19 +48,19 @@
         let oc = prompt("Podaj ocene z ostatniego sprawdzianu (bez plusów i minusów)")
 
         if (oc == 6) {
-            document.write('Brawo Ty!')
+            document.write('Brawo Ty! <br>')
         }
         else if (oc <= 5 && oc >= 4) {
-            document.write('Całkiem dobrze!')
+            document.write('Całkiem dobrze! <br>')
         }
         else if (oc == 3) {
-            document.write('Dostatecznie')
+            document.write('Dostatecznie <br>')
         }
         else if (oc >= 1 && oc <= 2) {
-            document.write('umów się na poprawe')
+            document.write('umów się na poprawe <br>')
         }
         else {
-            document.write('niewłaściwa wartość')
+            document.write('niewłaściwa wartość <br>')
         }
         let ocena = prompt("wpisz ocene z zakresu od 1-6")
 
@@ -105,7 +105,7 @@
 
         let info = prompt("Jaka jest twoja ulubiona członkini shadow garden z anime eminence in shadow")
         if (info == "Delta" || info == "delta") {
-            document.write("Bardzo dobry wybór")
+            document.write("Bardzo dobry wybór <br>")
         }
         else {
             document.write('Nie masz gustu')
@@ -114,6 +114,7 @@
 
     </script>
 
+    <a href="wstep.html">wstęp</a>
 </body>
 
 </html>
