dodano <br> przed linkami

--- a/szkolny-js/formatowaniestringa.html
+++ b/szkolny-js/formatowaniestringa.html
@@ -15,7 +15,7 @@
         document.write(tekst.italics().fontsize(59))
         document.write("<br>", tekst.fixed())
     </script>
-<a href="wstep.html">wstep</a>
+   <br> <a href="wstep.html">wstep</a>
 </body>
 
 </html>
