--- a/szkolny-js/funkcje.html
+++ b/szkolny-js/funkcje.html
@@ -75,7 +75,7 @@
         person(123, 18)
 
     </script>
-    <a href="wstep.html">Główna</a>
+    <br> <a href="wstep.html">Główna</a>
 </body>
 
 </html>
