--- a/szkolny-js/obiektDate.html
+++ b/szkolny-js/obiektDate.html
@@ -92,7 +92,7 @@
         document.write(`dzisiaj jest ${dni[data.getDay()]}, ${dz} ${miesna[data.getMonth()]} ${rok} <br>`)
 
     </script>
-    <a href="wstep.html">wstep</a>
+   <br> <a href="wstep.html">wstep</a>
 </body>
 
 </html>
