--- a/szkolny-js/zdarzenia/kolor_tla.html
+++ b/szkolny-js/zdarzenia/kolor_tla.html
@@ -19,7 +19,7 @@
     <p onMouseOver="kolor_tla('339900')">zielone tlo</p> <br>
     <p onMouseOver="kolor_tla('ffffcc')">waniliowe</p> <br>
 
-    <a href="../wstep.html">wstep</a>
+   <br> <a href="../wstep.html">wstep</a>
 </body>
 
 </html>
