--- a/szkolny-js/zdarzenia/onchange.html
+++ b/szkolny-js/zdarzenia/onchange.html
@@ -18,7 +18,7 @@
     <p>on change działą na takiej zasadzie że jak wpiszesz cos w pole <br> i naciśniesz enter albo opuścisz pole po
         prostu zmienia wartosć <br> na coś co zadelarowałęś tutaj np. uppercase</p>
 
-    <a href="../wstep.html">wstep</a>
+    <br> <a href="../wstep.html">wstep</a>
 </body>
 
 </html>
