--- a/szkolny-js/zdarzenia/onmousedown.html
+++ b/szkolny-js/zdarzenia/onmousedown.html
@@ -21,7 +21,7 @@
             document.getElementById("aaa").style.color = "green";
         }
     </script>
-    <a href="../wstep.html">wstep</a>
+   <br> <a href="../wstep.html">wstep</a>
 </body>
 
 </html>
