--- a/szkolny-js/zdarzenia/powitanie1.html
+++ b/szkolny-js/zdarzenia/powitanie1.html
@@ -10,7 +10,7 @@
 <body onLoad="alert('miło, że odwiedziłeś moją strone')">
     <h2 align="center">zdarzenie onload</h2>
 
-    <a href="../wstep.html">wstep</a>
+    <br><a href="../wstep.html">wstep</a>
 </body>
 
 </html>
