--- a/szkolny-js/zdarzenia/sdarznie6.html
+++ b/szkolny-js/zdarzenia/sdarznie6.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-<script>
-    document.onkeypress= wyswietl_komunikat;
-    function wyswietl_komunikat(){
-        alert("wciśnieto klawisz z klawiatury!")
-    }
-</script>
-<a href="../wstep.html">wstep</a>
+    <script>
+        document.onkeypress = wyswietl_komunikat;
+        function wyswietl_komunikat() {
+            alert("wciśnieto klawisz z klawiatury!")
+        }
+    </script>
+    <br> <a href="../wstep.html">wstep</a>
 </body>
 
 </html>
