--- a/szkolny-js/zegar/zegar_zew.html
+++ b/szkolny-js/zegar/zegar_zew.html
@@ -15,7 +15,7 @@
 
     <script src="zegar.js"></script>
 
-    <a href="../wstep.html">wstep</a>
+    <br><a href="../wstep.html">wstep</a>
 </body>
 
 </html>
