--- a/szkolny-js/location.html
+++ b/szkolny-js/location.html
@@ -19,7 +19,7 @@
         setTimeout("przekieruj();", 5000)
     </script>
     strona przeniesiona <br> zaraz zostaniesz przekierowany na nową lokalizacje<br>
-    <a href="wstep.html">wstep</a>
+   <br> <a href="wstep.html">wstep</a>
 </body>
 
 </html>
