--- a/szkolny-js/zdarzenia/zdarzenia6_2.html
+++ b/szkolny-js/zdarzenia/zdarzenia6_2.html
@@ -22,7 +22,7 @@
             }
         }
     </script>
-    <a href="../wstep.html">wstep</a>
+   <br> <a href="../wstep.html">wstep</a>
 
 </body>
 
