--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </a>
 
     <p>PS. Kiedyś rozdziele te tabelki na poszczególne lata :)</p>
+    <!-- komentarz dla arkwyra -->
 </body>
 
 </html>
