--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -47,6 +49,12 @@
             </div>
         </div>
     </nav>
+    <header id="naglowek">
+        <div id="napis-naglowek" class="container px-4 text-center">
+            <h1 class="fw-bolder text-capitalize"> Strona GitHub H0LD4😊</h1>
+        </div>
+    </header>
+
 
 </body>
 
