dodanie zakładki o mnie

--- a/aboutme.html
+++ b/aboutme.html
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Strona Główna</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Strona Główna</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="https://h0ld4.eu" target="_blank">srona druga</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="aboutme.html">O mnie</a>
+                        <a class="nav-link active" aria-current="page" href="aboutme.html">O mnie</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -54,10 +54,9 @@
     </nav>
     <header id="naglowek">
         <div id="napis-naglowek" class="container px-4 text-center">
-            <h1 class="fw-bolder text-capitalize"> Strona GitHub H0LD4😊</h1>
+            <h1 class="fw-bolder text-capitalize">O mnie 😵</h1>
         </div>
     </header>
-
 
 </body>
 
