dodanie sekcji ABOUTME

--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,18 @@
             <h1 class="fw-bolder text-capitalize">O mnie 😵</h1>
         </div>
     </header>
+    <section id="aboutme">
+        <div class="container px-4">
+            <div class="row gx-4 justify-content-center">
+                <div class="col-lg-8">
+                    <p class="lead text-center">Elo! Nazywam się <b>Filip</b> i chodze do 3 klasy technikum</p>
+                    <p class="text-center">w wolnym czasie zajmuje się maszynami wiurualnymi i linuxem!</p>
+                    <p class="text-center">Piszę tą stronę ponieważ nudzi mi się aktualnie na praktykach 😀</p>
+                </div>
 
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
