--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
         </div>
     </nav>
     <header id="naglowek">
-        <div id="napis-naglowek" class="container px-4 text-center">
+        <div id="napis-naglowek-about" class="container px-4 text-center">
             <h1 class="fw-bolder text-capitalize">O mnie 😵</h1>
         </div>
     </header>
