--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -53,7 +56,7 @@
         </div>
     </nav>
     <header id="naglowek">
-        <div id="napis-naglowek" class="container px-4 text-center">
+        <div id="napis-naglowek-main" class="container px-4 text-center">
             <h1 class="fw-bolder text-capitalize"> Strona GitHub H0LD4😊</h1>
         </div>
     </header>
