--- a/index.html
+++ b/index.html
@@ -2,25 +2,16 @@
 <html lang="pl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Road44 Strona</title>
-    <link rel="stylesheet" href="css/style_main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    <script src="js/loadHead.js" defer></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark text-capitalize">
         <div class="container-fluid px-5">
-            <a class="navbar-brand" href="#">Projekt BootStrap</a>
+            <a class="navbar-brand" href="index.html"> Strona GitHub H0LD4😊</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -60,8 +51,16 @@
             <h1 class="fw-bolder text-capitalize"> Strona GitHub H0LD4😊</h1>
         </div>
     </header>
-
-
+    <div class="container px-4">
+        <div class="row gx-4 justify-content-center">
+            
+        </div>
+    </div>
+    <footer class="py-5 bg-dark">
+        <div class="container px-4">
+            <p class="m-0 text-center text-white">Copyright © Filip Hołdyk </p>
+        </div>
+    </footer>
 </body>
 
 </html>
