--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="aboutme.html">O mnie</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="game-jam/index.html">Gra Memo</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -53,7 +56,7 @@
     </header>
     <div class="container px-4">
         <div class="row gx-4 justify-content-center">
-            
+
         </div>
     </div>
     <footer class="py-5 bg-dark">
