--- a/game-jam/index.html
+++ b/game-jam/index.html
@@ -28,6 +28,9 @@
             <span class="badge bg-primary text-dark fs-5">Liczba ruchów:
                 <div id="ruchy"><span>0</span></div>
             </span>
+            <span class="badge bg-warning text-dark fs-5">Czas:
+                <div id="czas"><span>0:00</span></div>
+            </span>
         </div>
 
     </div>
@@ -37,7 +40,7 @@
     <script src="js/board.js"></script>
     <script src="js/gameControl.js"></script>
     <footer>
-        <p>&copy; Strona utworzona przez: Filip Hołdyk, Wiktor Strąg, Dawid Węgrzyn (kolejność alfabetyczna) </p>
+        <p>&copy; Strona utworzona przez: Hołdyk Filip, Strąg Wiktor, Węgrzyn Dawid (kolejność alfabetyczna) </p>
     </footer>
 </body>
 
