--- a/game-jam/index.html
+++ b/game-jam/index.html
@@ -7,6 +7,10 @@
     <title>Projekt memo </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -36,6 +40,16 @@
     </div>
     <div id="board" class="board">
     </div>
+
+    <div id="win-overlay"></div>
+    <div id="win-message">
+        <h2>Gratulacje! Wygrałeś!</h2>
+        <p id="final-score" class="mb-3 text-dark fs-5"></p>
+        <p id="final-moves" class="mb-3 text-dark fs-5"></p>
+        <button id="restart" class="btn btn-success">Od nowa</button>
+    </div>
+
+
 
     <script src="js/board.js"></script>
     <script src="js/gameControl.js"></script>
