--- a/game-jam/index.html
+++ b/game-jam/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/style-main.css">
     <link rel="stylesheet" href="css/style-board.css">
+    <script src="js/link.js"></script>
 </head>
 
 
@@ -22,6 +23,7 @@
         <div class="text-center mb-4">
             <h1 class="mb-3 text-light">Gra Memo</h1>
             <div id="sterowanie-gra" class="d-flex justify-content-center gap-3">
+                <button class="btn btn-warning" onclick="przekierowanie()">Strona Główna</button>
                 <button class="btn btn-primary" id="start">Start</button>
                 <button class="btn btn-danger" id="reset">Reset</button>
             </div>
