dalej wersja testowa

--- a/index.html
+++ b/index.html
@@ -9,46 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark text-capitalize">
-        <div class="container-fluid px-5">
-            <a class="navbar-brand" href="index.html"> Strona GitHub H0LD4😊</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Strona Główna</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="https://h0ld4.eu" target="_blank">srona druga</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="aboutme.html">O mnie</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="game-jam/index.html">Gra Memo</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            lista rozwijana
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item " href="szkolny-js/wstep.html" target="_blank">Strona JS - Klasa
-                                    3</a></li>
-                            <!-- <li>
-                                <hr class="dropdown-divider">
-                            </li> -->
-                            <!-- <li><a class="dropdown-item " href="#">Something else here</a></li> -->
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <script src="js/loadNav.js"></script>
     <header id="naglowek">
         <div id="napis-naglowek-main" class="container px-4 text-center">
             <h1 class="fw-bolder text-capitalize"> Strona GitHub H0LD4😊</h1>
