--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <script src="js/loadNav.js"></script>
+    <div id="navbar"></div>
     <header id="naglowek">
         <div id="napis-naglowek-main" class="container px-4 text-center">
             <h1 class="fw-bolder text-capitalize"> Strona GitHub H0LD4😊</h1>
