--- a/matma.html
+++ b/matma.html
@@ -11,16 +11,22 @@
     <div id="navbar"></div>
     <header id="naglowek">
         <div id="napis-naglowek-about" class="container px-4 text-center">
-            <h1 class="fw-bolder text-capitalize">O mnie 😵</h1>
+            <h1 class="fw-bolder text-capitalize">Lista filmików z matmy 🪶🧮</h1>
         </div>
     </header>
-    <section id="aboutme">
+    <section id="lista">
         <div class="container px-4">
             <div class="row gx-4 justify-content-center">
                 <div class="col-lg-8">
-                    <p class="lead text-center">Elo! Nazywam się <b>Filip</b> i chodzę do 3 klasy technikum</p>
-                    <p class="text-center">w wolnym czasie zajmuje się maszynami wiurualnymi i linuxem!</p>
-                    <p class="text-center">Piszę tą stronę ponieważ nudzi mi się aktualnie na praktykach 😀</p>
+                    <ul>
+                        <li><a href="https://www.youtube.com/playlist?list=PLTf9R_TZjnWabVpPU-5n-iXW7PCxJgo37"
+                                target="_blank">Playlista ogólna klasa 2-3</a> </li>
+                        <li><a href="#" target="_blank">Playlista ogólna klasa 4</a>
+                            <ol>
+                                <li><a href="#" target="_blank">Filmik #1 (jeszcze nie ma)</a> </li>
+                            </ol>
+                        </li>
+                    </ul>
                 </div>
 
             </div>
