--- a/head/nav.html
+++ b/head/nav.html
@@ -11,13 +11,13 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Strona Główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="https://h0ld4.eu" target="_blank">srona druga</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="aboutme.html">O mnie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="game-jam/index.html">Gra Memo</a>
+                <li class="nav-item">
+                    <a class="nav-link " href="https://h0ld4.eu" target="_blank">srona druga</a>
+                </li>
+                <a class="nav-link" aria-current="page" href="game-jam/index.html">Gra Memo</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -27,10 +27,10 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item " href="szkolny-js/wstep.html" target="_blank">Strona JS - Klasa
                                 3</a></li>
-                        <!-- <li>
-                                <hr class="dropdown-divider">
-                            </li> -->
-                        <!-- <li><a class="dropdown-item " href="#">Something else here</a></li> -->
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item " href="matma.html">Filmiki z matmy</a></li>
                     </ul>
                 </li>
             </ul>
