--- a/head/nav.html
+++ b/head/nav.html
@@ -15,7 +15,7 @@
                 </li>
                 <li class="nav-item">
                 <li class="nav-item">
-                    <a class="nav-link " href="https://h0ld4.eu" target="_blank">srona druga</a>
+                    <a class="nav-link " href="https://h0ld4.eu" target="_blank">Strona druga</a>
                 </li>
                 <a class="nav-link" aria-current="page" href="game-jam/index.html">Gra Memo</a>
                 </li>
