--- a/matma.html
+++ b/matma.html
@@ -11,7 +11,7 @@
     <div id="navbar"></div>
     <header id="naglowek">
         <div id="napis-naglowek-about" class="container px-4 text-center">
-            <h1 class="fw-bolder text-capitalize">Lista filmików z matmy 🪶🧮</h1>
+            <h1 class="fw-bolder text-capitalize">Lista filmików z matmy 🔢</h1>
         </div>
     </header>
     <section id="lista">
@@ -23,7 +23,8 @@
                                 target="_blank">Playlista ogólna klasa 2-3</a> </li>
                         <li><a href="#" target="_blank">Playlista ogólna klasa 4</a>
                             <ol>
-                                <li><a href="https://youtu.be/5wmTT8FI-V8" target="_blank">Filmik #1 - Statystyka</a> </li>
+                                <li><a href="https://youtu.be/5wmTT8FI-V8" target="_blank">Filmik #1 - Statystyka</a>
+                                </li>
                             </ol>
                         </li>
                     </ul>
