--- a/head/head.html
+++ b/head/head.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Strona GitHub H0LD4😊</title>
+<link rel="shortcut icon" href="assets/hoi4.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/style_main.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
