--- a/aboutme.html
+++ b/aboutme.html
@@ -19,10 +19,16 @@
             <div class="row gx-4 justify-content-center">
                 <div class="col-lg-8">
                     <p class="lead text-center">Elo! Nazywam się <b>Filip</b> i chodzę do 4 klasy technikum</p>
-                    <p class="text-center">w wolnym czasie zajmuje się maszynami wiurualnymi i linuxem!</p>
+                    <p class="text-center">w wolnym czasie zajmuje się maszynami wirtualnymi i linuxem!</p>
                     <p class="text-center">Piszę tą stronę ponieważ nudzi mi się aktualnie na praktykach 😀</p>
                 </div>
 
+            </div> <br>
+            <div class="row gx-4 justify-content-center">
+                <h2 class="text-center">Mój sprzęt</h2>
+                <ul>
+                    
+                </ul>
             </div>
         </div>
     </section>
