--- a/aboutme.html
+++ b/aboutme.html
@@ -24,11 +24,16 @@
                 </div>
 
             </div> <br>
-            <div class="row gx-4 justify-content-center">
-                <h2 class="text-center">Mój sprzęt</h2>
-                <ul>
-                    
-                </ul>
+            <div class="row gx-4 justify-content-center text-center">
+                <h2>Mój sprzęt</h2>
+                <ol style="list-style-position: inside;">
+                    <li>Laptop LENOVO ThinkBook 16 G7 IML
+                        <ul>
+                            <li>CPU: Intel Core Ultra 155H</li>
+                            <li>RAM: 16GB DDR5 5600 Mhz</li>
+                        </ul>
+                    </li>
+                </ol>
             </div>
         </div>
     </section>
