--- a/aboutme.html
+++ b/aboutme.html
@@ -26,14 +26,32 @@
             </div> <br>
             <div class="row gx-4 justify-content-center text-center">
                 <h2>Mój sprzęt</h2>
-                <ol style="list-style-position: inside;">
-                    <li>Laptop LENOVO ThinkBook 16 G7 IML
-                        <ul>
-                            <li>CPU: Intel Core Ultra 155H</li>
-                            <li>RAM: 16GB DDR5 5600 Mhz</li>
-                        </ul>
-                    </li>
-                </ol>
+                <table class="table mx-auto" style="border:1px solid black;">
+                    <tr>
+                        <th colspan="2">Laptop LENOVO ThinkBook 16 G7 IML</th>
+                    </tr>
+                    <tr>
+                        <td>CPU:</td>
+                        <td>Intel Core Ultra 155H</td>
+                    </tr>
+                    <tr>
+                        <td>RAM:</td>
+                        <td>16GB DDR5 5600 Mhz</td>
+                    </tr>
+                    <tr>
+                        <td>Dysk:</td>
+                        <td>SAMSUNG MZAL8512HDLU-00BL2 (512 GB)</td>
+                    </tr>
+                    <tr>
+                        <td>Przekątna ekrany:</td>
+                        <td>16"</td>
+                    </tr>
+                    <tr>
+                        <td>Rozdzielczość:</td>
+                        <td>1920x1200</td>
+                    </tr>
+                </table>
+
             </div>
         </div>
     </section>
