--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <footer class="py-5 bg-dark">
         <div class="container px-4">
-            <p class="m-0 text-center text-white">Copyright © Filip Hołdyk </p>
+            <p class="m-0 text-center text-white">Copyright &copy; Filip Hołdyk </p>
         </div>
     </footer>
 </body>
