--- a/aboutme.html
+++ b/aboutme.html
@@ -43,12 +43,20 @@
                         <td>SAMSUNG MZAL8512HDLU-00BL2 (512 GB)</td>
                     </tr>
                     <tr>
-                        <td>Przekątna ekrany:</td>
+                        <td>Przekątna ekranu:</td>
                         <td>16"</td>
                     </tr>
                     <tr>
                         <td>Rozdzielczość:</td>
                         <td>1920x1200</td>
+                    </tr>
+                    <tr>
+                        <td>Główny system:</td>
+                        <td>Windows 11 Pro</td>
+                    </tr>
+                    <tr>
+                        <td>Drugi system:</td>
+                        <td><b>Linux Mint 22.2</b> </td>
                     </tr>
                 </table>
 
